@startuml

title __LOGIN's Class Diagram__\n

  namespace com.example.bbs {
    namespace ui.login {
      class com.example.bbs.ui.login.MySqliteOpenHelper {
          {static} - mInstance : SQLiteOpenHelper
          {static} + getMInstance()
          + onCreate()
          + onUpgrade()
          - MySqliteOpenHelper()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.login {
      class com.example.bbs.ui.login.Register {
          ~ image : Integer
          - button : Button
          - cancel : Button
          - choose : Button
          - icon : ImageView
          + register()
          # onActivityResult()
          # onCreate()
          ~ init()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.login {
      class com.example.bbs.ui.login.ShowIcon {
          ~ gridView : GridView
          ~ images : int[]
          ~ list : List<Map<String, Object>>
          ~ simpleAdapter : SimpleAdapter
          # onCreate()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.login {
      class com.example.bbs.ui.login.User {
          - UserName : String
          - content : String
          - image : int
          - password : String
          + User()
          + getContent()
          + getImage()
          + getPassword()
          + getUserName()
          + setContent()
          + setImage()
          + setPassword()
          + setUserName()
      }
    }
  }
  

  com.example.bbs.ui.login.MySqliteOpenHelper -up-|> android.database.sqlite.SQLiteOpenHelper
  com.example.bbs.ui.login.Register -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bbs.ui.login.ShowIcon -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bbs.ui.login.User .up.|> java.io.Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
